--- a/templates/cuentas/menu.html
+++ b/templates/cuentas/menu.html
@@ -18,6 +18,12 @@
         </a>
       </li>
 
+      <li class="nav-item">
+        <a href="/generate" class="btn">
+          Generate text
+        </a>
+      </li>
+
       <li class="nav-item dropdown">
         <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           My account
