--- a/templates/cuentas/signup.html
+++ b/templates/cuentas/signup.html
@@ -70,6 +70,8 @@
 
                 <button type="submit" class="btn btn-primary w-100">Create account</button>
             </form>
+            <br>
+            <a class="btn btn-primary w-100" href="/">Go back</a>
         </div>
     </div>
 </div>
