--- a/static/cuentas/styles.css
+++ b/static/cuentas/styles.css
@@ -105,7 +105,7 @@ textarea {
   font-size: xx-large;
 }
 
-.half-bottom-analyze {
+.half-bottom{
   display:flex;
   flex-direction: column;
   align-items: center;
