--- a/templates/cuentas/login.html
+++ b/templates/cuentas/login.html
@@ -51,6 +51,8 @@
                 
                 <button type="submit" class="btn btn-primary w-100">Log in</button>
             </form>
+            <br>
+            <a class="btn btn-primary w-100" href="/">Go back</a>
         </div>
     </div>
 </div>
